--- a/Dockerfile.wheels
+++ b/Dockerfile.wheels
@@ -103,9 +103,9 @@ RUN cd /usr/local/src \
 
 ## netcdf
 RUN cd /usr/local/src \
-    && curl -f -L -O ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf-4.6.1.tar.gz \
-    && tar xzf netcdf-4.6.1.tar.gz \
-    && cd netcdf-4.6.1 \
+    && curl -f -L -O https://github.com/Unidata/netcdf-c/archive/v4.6.1.tar.gz \
+    && tar xzf v4.6.1.tar.gz \
+    && cd netcdf-c-4.6.1 \
     && CFLAGS="-I/usr/local/include -O2 -Wl,-S" CXXFLAGS="-I/usr/local/include -O2 -Wl,-S" LDFLAGS="-L/usr/local/lib" ./configure \
     && make -j 4 \
     && make install
