Add FileGDB and improve PROJ_LIB detection

--- a/Dockerfile.wheels
+++ b/Dockerfile.wheels
@@ -128,6 +128,13 @@ RUN cd /usr/local/src \
     && make -j 4 \
     && make install
 
+## FileGDB
+RUN cd /usr/local/src \
+    && curl -f -L -O https://github.com/Esri/file-geodatabase-api/raw/master/FileGDB_API_1.5.1/FileGDB_API_1_5_1-64.tar.gz \
+    && tar xzf FileGDB_API_1_5_1-64.tar.gz \
+    && cp FileGDB_API-64/lib/* /usr/local/lib \
+    && ldconfig
+
 # gdal
 RUN mkdir -p /src \
     && cd /src \
@@ -166,6 +173,7 @@ RUN mkdir -p /src \
         --without-python \
         --without-hdf4 \
         --without-hdf5 \
+        --with-fgdb=/usr/local/src/FileGDB_API-64 \
     && make -j 4 \
     && make install
 
