--- a/Dockerfile.wheels
+++ b/Dockerfile.wheels
@@ -196,12 +196,12 @@ RUN for PYBIN in /opt/python/*/bin; do \
 
 # Replace SWIG's setup.py with this modified one, which gets numpy in
 # there as a dependency.
-ADD setup.py /src/gdal-3.0.4/swig/python/setup.py
+ADD setup.py /src/gdal-3.1.0rc1/swig/python/setup.py
 
 # Replace the osgeo module __init__.py with this modified one, which
 # sets the GDAL_DATA and PROJ_LIB variables on import to where they've
 # been copied to.
-ADD gdalinit.py /src/gdal-3.0.4/swig/python/osgeo/__init__.py
+ADD gdalinit.py /src/gdal-3.1.0rc1/swig/python/osgeo/__init__.py
 
 WORKDIR /io
 CMD ["/io/build-linux-wheels.sh"]
