--- a/Dockerfile.wheels
+++ b/Dockerfile.wheels
@@ -18,6 +18,7 @@ RUN yum update -y && yum install -y curl-devel json-c-devel zlib-devel libtiff-d
 # They do not support -mavx or newer
 ARG CFLAGS="-O2 -Wl,-S -m64 -mmmx -msse -msse2 -msse3 -mssse3 -msse4.1 -msse4.2 -mfpmath=sse -mtune=core-avx2 -pipe"
 ARG CXXFLAGS="-O2 -Wl,-S -m64 -mmmx -msse -msse2 -msse3 -mssse3 -msse4.1 -msse4.2 -mfpmath=sse -mtune=core-avx2 -pipe"
+ARG PROJ_NETWORK="ON"
 
 # Install openssl
 RUN mkdir -p /src \
@@ -54,23 +55,12 @@ RUN mkdir -p /src \
     && make install \
     && rm -rf /src
 
-# Install jasper
+# proj
 RUN mkdir -p /src \
     && cd /src \
-    && curl -f -L -O http://download.osgeo.org/gdal/jasper-1.900.1.uuid.tar.gz \
-    && tar xzf jasper-1.900.1.uuid.tar.gz \
-    && cd /src/jasper-1.900.1.uuid \
-    && ./configure --disable-debug --enable-shared \
-    && make -j 8 \
-    && make install \
-    && rm -rf /src
-
-# proj4
-RUN mkdir -p /src \
-    && cd /src \
-    && curl -f -L -O http://download.osgeo.org/proj/proj-6.2.1.tar.gz \
-    && tar xzf proj-6.2.1.tar.gz \
-    && cd /src/proj-6.2.1 \
+    && curl -f -L -O http://download.osgeo.org/proj/proj-7.0.0.tar.gz \
+    && tar xzf proj-7.0.0.tar.gz \
+    && cd /src/proj-7.0.0 \
     && ./configure  \
     && make -j 8 \
     && make install \
@@ -87,9 +77,9 @@ RUN cd /usr/local/src \
 # openjpeg
 RUN mkdir -p /src \
     && cd /src \
-    && curl -f -L -O https://github.com/uclouvain/openjpeg/archive/v2.3.0.tar.gz \
-    && tar xzf v2.3.0.tar.gz \
-    && cd /src/openjpeg-2.3.0 \
+    && curl -f -L -O https://github.com/uclouvain/openjpeg/archive/v2.4.1.tar.gz \
+    && tar xzf v2.4.1.tar.gz \
+    && cd /src/openjpeg-2.4.1 \
     && mkdir -p build \
     && cd build \
     && /usr/local/cmake/bin/cmake .. -DBUILD_THIRDPARTY:BOOL=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local \
@@ -99,18 +89,18 @@ RUN mkdir -p /src \
 
 # hdf
 RUN cd /usr/local/src \
-    && curl -f -L -O https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.10/hdf5-1.10.2/src/hdf5-1.10.2.tar.gz \
-    && tar xzf hdf5-1.10.2.tar.gz \
-    && cd hdf5-1.10.2 \
+    && curl -f -L -O https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.12/hdf5-1.12.0/src/hdf5-1.12.0.tar.gz \
+    && tar xzf hdf5-1.12.0.tar.gz \
+    && cd hdf5-1.12.0 \
     && ./configure --prefix=/usr/local --enable-shared --enable-build-mode=production  \
     && make -j 8 \
     && make install
 
 ## netcdf
 RUN cd /usr/local/src \
-    && curl -f -L -O https://github.com/Unidata/netcdf-c/archive/v4.6.1.tar.gz \
-    && tar xzf v4.6.1.tar.gz \
-    && cd netcdf-c-4.6.1 \
+    && curl -f -L -O https://github.com/Unidata/netcdf-c/archive/v4.7.4.tar.gz \
+    && tar xzf v4.7.4.tar.gz \
+    && cd netcdf-c-4.7.4 \
     && CFLAGS="-I/usr/local/include -O2 -Wl,-S" CXXFLAGS="-I/usr/local/include -O2 -Wl,-S" LDFLAGS="-L/usr/local/lib" ./configure \
     && make -j 8 \
     && make install
@@ -126,9 +116,9 @@ RUN cd /usr/local/src \
 
 ## webp
 RUN cd /usr/local/src \
-    && curl -f -L -O https://storage.googleapis.com/downloads.webmproject.org/releases/webp/libwebp-0.6.1.tar.gz \
-    && tar xzf libwebp-0.6.1.tar.gz \
-    && cd libwebp-0.6.1 \
+    && curl -f -L -O https://storage.googleapis.com/downloads.webmproject.org/releases/webp/libwebp-1.0.3.tar.gz \
+    && tar xzf libwebp-1.0.3.tar.gz \
+    && cd libwebp-1.0.3 \
     && ./configure --prefix=/usr/local \
     && make -j 8 \
     && make install
@@ -169,7 +159,7 @@ RUN mkdir -p /src \
         --with-grib \
         --with-pam \
         --with-geos=/usr/local/bin/geos-config \
-        --with-static-proj4=/usr/local \
+        --with-proj=/usr/local \
         --with-expat=/usr/local \
         --with-libjson-c \
         --with-libiconv-prefix=/usr \
@@ -177,7 +167,6 @@ RUN mkdir -p /src \
         --with-curl=/usr/local/bin/curl-config \
         --with-netcdf=/usr/local/netcdf \
         --with-openjpeg \
-        --with-jasper=/usr/local \
         --without-python \
         --without-hdf4 \
         --without-hdf5 \
