--- a/Dockerfile.wheels
+++ b/Dockerfile.wheels
@@ -49,6 +49,7 @@ RUN mkdir -p /src \
     && cd /src \
     && curl -f -L -O https://download.osgeo.org/libtiff/tiff-4.1.0.tar.gz \
     && tar zxf tiff-4.1.0.tar.gz \
+    && cd tiff-4.1.0 \
     && ./configure \
     && make -j 8 \
     && make install \
@@ -68,9 +69,9 @@ RUN mkdir -p /src \
 # proj
 RUN mkdir -p /src \
     && cd /src \
-    && curl -f -L -O http://download.osgeo.org/proj/proj-7.0.0.tar.gz \
-    && tar xzf proj-7.0.0.tar.gz \
-    && cd /src/proj-7.0.0 \
+    && curl -f -L -O http://download.osgeo.org/proj/proj-6.3.1.tar.gz \
+    && tar xzf proj-6.3.1.tar.gz \
+    && cd /src/proj-6.3.1 \
     && ./configure  \
     && make -j 8 \
     && make install \
@@ -87,9 +88,9 @@ RUN cd /usr/local/src \
 # openjpeg
 RUN mkdir -p /src \
     && cd /src \
-    && curl -f -L -O https://github.com/uclouvain/openjpeg/archive/v2.4.1.tar.gz \
-    && tar xzf v2.4.1.tar.gz \
-    && cd /src/openjpeg-2.4.1 \
+    && curl -f -L -O https://github.com/uclouvain/openjpeg/archive/v2.3.1.tar.gz \
+    && tar xzf v2.3.1.tar.gz \
+    && cd /src/openjpeg-2.3.1 \
     && mkdir -p build \
     && cd build \
     && /usr/local/cmake/bin/cmake .. -DBUILD_THIRDPARTY:BOOL=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local \
@@ -108,9 +109,9 @@ RUN cd /usr/local/src \
 
 ## netcdf
 RUN cd /usr/local/src \
-    && curl -f -L -O https://github.com/Unidata/netcdf-c/archive/v4.7.4.tar.gz \
-    && tar xzf v4.7.4.tar.gz \
-    && cd netcdf-c-4.7.4 \
+    && curl -f -L -O https://github.com/Unidata/netcdf-c/archive/v4.6.1.tar.gz \
+    && tar xzf v4.6.1.tar.gz \
+    && cd netcdf-c-4.6.1 \
     && CFLAGS="-I/usr/local/include -O2 -Wl,-S" CXXFLAGS="-I/usr/local/include -O2 -Wl,-S" LDFLAGS="-L/usr/local/lib" ./configure \
     && make -j 8 \
     && make install
@@ -146,8 +147,8 @@ RUN /usr/local/bin/geos-config --includes
 # gdal
 RUN mkdir -p /src \
     && cd /src \
-    && curl -f -L -O http://download.osgeo.org/gdal/3.1.0/gdal-3.1.0rc1.tar.gz \
-    && tar xzf gdal-3.1.0rc1.tar.gz \
+    && curl -f -L -O http://download.osgeo.org/gdal/3.1.0/gdal-3.1.0rc2.tar.gz \
+    && tar xzf gdal-3.1.0rc2.tar.gz \
     && cd /src/gdal-3.1.0 \
     && ./configure \
         --with-threads \
@@ -195,12 +196,12 @@ RUN for PYBIN in /opt/python/*/bin; do \
 
 # Replace SWIG's setup.py with this modified one, which gets numpy in
 # there as a dependency.
-ADD setup.py /src/gdal-3.1.0rc1/swig/python/setup.py
+ADD setup.py /src/gdal-3.1.0rc2/swig/python/setup.py
 
 # Replace the osgeo module __init__.py with this modified one, which
 # sets the GDAL_DATA and PROJ_LIB variables on import to where they've
 # been copied to.
-ADD gdalinit.py /src/gdal-3.1.0rc1/swig/python/osgeo/__init__.py
+ADD gdalinit.py /src/gdal-3.1.0rc2/swig/python/osgeo/__init__.py
 
 WORKDIR /io
 CMD ["/io/build-linux-wheels.sh"]
